<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Firebase Login Demo</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="login_with_password">Login with Password</string>
    <string name="login_anonymously">Login Anonymously</string>

    <string name="skrivher">Skriv her</string>
    <string name="textinput">Skriv her</string>
    <string name="add">+</string>
    <string name="deletebutton">x</string>
    <string name="about">Info</string>
    <string name="clear">Clear</string>
    <string name="hinttext">Skriv her</string>
    <string name="addbuttontxt">Tilføj</string>
    <string name="setpref">Indstillinger</string>
    <string name="deletebuttxt">Slet</string>
    <string-array name="howmanyarray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="themes_values">
        <item>white</item>
        <item>grey</item>
        <item>yellow</item>
        <item>lightblue</item>
    </string-array>

    <string-array name="themes_type">
        <item>Hvid</item>
        <item>Grå</item>
        <item>Gul</item>
        <item>Lys Blå</item>
    </string-array>
</resources>
