<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.firebase.samples.logindemo.MainActivity">
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_about"
        app:showAsAction="never"
        android:orderInCategory="2"
        android:title="@string/about"/>

    <item android:id="@+id/share"
        android:title="ShareList"
        android:icon="@drawable/ic_share"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_clear"
        android:icon="@drawable/ic_clear"
        app:showAsAction= "always"
        android:orderInCategory="1"
        android:title="@string/clear"/>
</menu>


