<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"

    tools:context="com.firebase.samples.logindemo.Main2Activity"
    android:id="@+id/layout"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <Spinner
            android:id="@+id/howmanyspinner"
            android:entries="@array/howmanyarray"
            android:layout_width="60dp"
            android:layout_height="60dp" />

        <EditText
            android:id="@+id/itemInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:hint="@string/hinttext" />

        <Button
            android:id="@+id/addButton"
            android:text="@string/addbuttontxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#607D8B"
            android:textColor="#ffffff"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:measureWithLargestChild="false">

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:divider="#b6b6b6"
            android:dividerHeight="1dp"
            android:layout_gravity="top"
            android:layout_weight="10">

        </ListView>

        <Button
            android:id="@+id/deleteButton"
            android:text="@string/deletebuttxt"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:textColor="#ffffff"
            android:layout_weight="1"
            android:background="#607D8B"
            android:layout_gravity="end" />
    </LinearLayout>

</LinearLayout>

